fix letter-spacing to max-width

--- a/blocks/place/__title/_br/place__title_br.css
+++ b/blocks/place/__title/_br/place__title_br.css
@@ -1,9 +1,3 @@
 .place__title_br {
-  letter-spacing: 2px;
-}
-
-@media (max-width: 767px) {
-  .place__title_br {
-    letter-spacing: 0;
-  }
+  max-width: 97%;
 }
